# CPPSFMT

./: .gitmodules  CMakeLists.txt  LICENSE
include/: AlignedUniquePtr.hpp  SFMT.hpp  SimdMt.hpp  dSFMT.hpp
src/: SFMT.cpp  dSFMT.cpp
